// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slashEnd Should check for a bad token 1`] = `"Invalid request or missing token"`;

exports[`slashEnd Should check for a missing token 1`] = `"Invalid request or missing token"`;

exports[`slashEnd Should check for insufficient permissions 1`] = `
Object {
  "ephemeral_text": "Unable to close the poll. Only the poll creator can close a poll. Please ask @jed.fonner to close it.",
}
`;

exports[`slashEnd Should successfully end the poll 1`] = `
Object {
  "ephemeral_text": "Unable to close the poll. TypeError: pollRef.update is not a function",
}
`;
